--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -8,16 +8,19 @@
 
     <div class='w3-row w3-padding-hor-16'>
         <div class='w3-col l1'>Status</div>
-        <div class='w3-col l3'>Name</div>
+        <div class='w3-col l2'>Name</div>
+        <div class='w3-col l4'>URL</div>
         <div class='w3-col l2'>Last Response</div>
         <div class='w3-col l2'>Last Duration</div>
     </div>
     <@ for config in configs @>
     <div class='w3-row'>
         <div class='w3-col l1'><span class='<@ if config.active @>w3-light-green<@ else @>w3-red<@ endif @>'>&nbsp;</span></div>
-        <div class='w3-col l3'><h4 class='w3-margin-0'>{{ config.name }}</h4></div>
-        <div class='w3-col l2'></div>
-        <div class='w3-col l2'></div>
+        <div class='w3-col l2'><h4 class='w3-margin-0'>{{ config.name }}</h4></div>
+        <div class='w3-col l4'><h4 class='w3-margin-0'>{{ config.url }}</h4></div>
+        <div class='w3-col l2'>&nbsp;</div>
+        <div class='w3-col l2'>&nbsp;</div>
+        <div class='w3-col l1'><a href='/uptime-checks/{{ config._id }}'><span class='uc-ion ion-edit'>&nbsp;</span></a></div>
     </div>
     <@ endfor @>
 <@ endblock @>
