--- a/views/check-details.html
+++ b/views/check-details.html
@@ -1,7 +1,7 @@
 <@ extends "base.html" @>
 
 <@ block header @>
-    <h3>Uptime - Configurations Details</h3>
+    <h3>Uptime - Configuration Details</h3>
 <@ endblock @>
 
 <@ block content @>
