--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -22,4 +22,8 @@
         <div class='w3-col l2'>&nbsp;</div>
     </div>
     <@ endfor @>
+
+    <div class='w3-row w3-padding-hor-24'>
+        <a href='/uptime-checks/create'><button class='w3-btn w3-border w3-pale-green w3-small uc-width-small'>Create Check</button></a>
+    </div>
 <@ endblock @>
