add new uptime checker -> register setInterval in backend and save

--- a/views/check-details.html
+++ b/views/check-details.html
@@ -8,6 +8,13 @@
 
     <form action='/uptime-checks/{{ config._id }}' method='POST' enctype='application/json'>
         <div class='w3-row w3-padding-hor-4'>
+            <div class='w3-col l2'>Active:</div>
+            <div class='w3-col l4'>
+                <span style='display: inline-block; width: 48px'>Yes:</span> <input type='radio' name='active' value='true' style='width: auto' <@ if config.active and settings.intervalsMap[config._id] != undefined @>checked='checked'<@ endif @>> <br>
+                <span style='display: inline-block; width: 48px'>No:</span> <input type='radio' name='active' value='false' style='width: auto' <@ if config.active == false @>checked='checked'<@ endif @>>
+            </div>
+        </div>
+        <div class='w3-row w3-padding-hor-4'>
             <div class='w3-col l2'>Name:</div><div class='w3-col l4'><input name='name' value='{{ config.name }}'></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
