--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -9,17 +9,17 @@
     <div class='w3-row w3-padding-hor-16'>
         <div class='w3-col l1'>Status</div>
         <div class='w3-col l2'>Name</div>
-        <div class='w3-col l5'>URL</div>
         <div class='w3-col l2'>Last Response</div>
         <div class='w3-col l2'>Duration</div>
+        <div class='w3-col l2'>Next Check</div>
     </div>
     <@ for config in configs @>
-    <div class='w3-row'>
+    <div class='w3-row w3-padding-hor-8'>
         <div class='w3-col l1'><span class='<@ if config.active @>w3-light-green<@ else @>w3-red<@ endif @>'>&nbsp;</span></div>
         <div class='w3-col l2'><h4 class='w3-margin-0'><a href='/uptime-checks/{{ config._id }}'>{{ config.name }}</a></h4></div>
-        <div class='w3-col l5'><code class='w3-medium'>{{ config.url }}</code></div>
         <div class='w3-col l2'>&nbsp;</div>
         <div class='w3-col l2'>&nbsp;</div>
+        <div class='w3-col l2'><@if config.next_check @>in {{ config.next_check }}ms<@ else @>not scheduled<@ endif @></div>
     </div>
     <@ endfor @>
 
