--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -19,7 +19,8 @@
         <div class='w3-col l2'><h4 class='w3-margin-0'><a href='/uptime-checks/{{ config._id }}'>{{ config.name }}</a></h4></div>
         <div class='w3-col l2'>&nbsp;</div>
         <div class='w3-col l2'>&nbsp;</div>
-        <div class='w3-col l2'><@if config.next_check @>in {{ config.next_check }}ms<@ else @>not scheduled<@ endif @></div>
+        <@ set next_check_in = next_check( config.next_check ) @>
+        <div class='w3-col l2'><@if config.active and next_check_in > 0 @>in {{ next_check_in }}s<@ else @>not scheduled<@ endif @></div>
     </div>
     <@ endfor @>
 
