css, improve -> uc-ion width

--- a/public/stylesheets/uc.css
+++ b/public/stylesheets/uc.css
@@ -70,7 +70,9 @@ td {
 /*  */
 
 .uc-ion {
+    display: inline-block;
     margin: 0 4px;
+    width: 16px;
     cursor: pointer;
 }
 .uc-width-really-short {
