checks -> change to seconds in configuration

--- a/views/uptime-check-create.html
+++ b/views/uptime-check-create.html
@@ -20,7 +20,7 @@
             <div class='w3-col l2'>URL Data:</div><div class='w3-col l4'><input name='data' value=''></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Interval (in ms):</div><div class='w3-col l4'><input name='interval' value='' placeholder='default: 60000'></div>
+            <div class='w3-col l2'>Interval (in seconds):</div><div class='w3-col l4'><input name='interval' value='' placeholder='default: 60'></div>
         </div>
 
         <div class='w3-row w3-padding-hor-24'>
