check details -> show same icons as on main page

--- a/public/stylesheets/uc.css
+++ b/public/stylesheets/uc.css
@@ -75,6 +75,13 @@ td {
     width: 16px;
     cursor: pointer;
 }
+.uc-ion-narrow {
+    display: inline-block;
+    margin: 0 4px;
+    width: 8px;
+    cursor: pointer;
+}
+
 .uc-width-really-short {
     width: 28px;
 }
