--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -9,18 +9,17 @@
     <div class='w3-row w3-padding-hor-8'>
         <div class='w3-col l1 w3-padding-hor-4 w3-border-bottom'>Status</div>
         <div class='w3-col l2 w3-padding-hor-4 w3-border-bottom'>Name</div>
+        <div class='w3-col l2 w3-padding-hor-4 w3-border-bottom'>When</div>
         <div class='w3-col l2 w3-padding-hor-4 w3-border-bottom'>Last Response</div>
         <div class='w3-col l2 w3-padding-hor-4 w3-border-bottom'>Last Duration</div>
-        <div class='w3-col l2 w3-padding-hor-4 w3-border-bottom'>Next Check</div>
     </div>
     <@ for config in configs @>
     <div class='uc-config w3-row w3-padding-hor-8' id='{{ config._id }}'>
         <div class='w3-col l1'><span class='ion <@ if config.active @>ion-ios-stopwatch-outline w3-text-green<@ else @>ion-android-hand w3-text-red<@ endif @>'>&nbsp;</span></div>
         <div class='w3-col l2'><h4 class='w3-margin-0'><a href='/uptime-checks/{{ config._id }}'>{{ config.name }}</a></h4></div>
+        <div class='w3-col l2'><@if config.active @>every {{ config.interval }}s<@ else @>not scheduled<@ endif @></div>
         <div class='w3-col l2 js-config-last-response'>{{ config.last_response }}</div>
         <div class='w3-col l2 js-config-last-duration'>{{ config.last_duration }}</div>
-        <@ set next_check_in = next_check( config.next_check ) @>
-        <div class='w3-col l2'><@if config.active and next_check_in > 0 @>in {{ next_check_in | round(0, "ceiling") }}s<@ else @>not scheduled<@ endif @></div>
     </div>
     <@ endfor @>
 
