css -> use centered layout

--- a/views/base.html
+++ b/views/base.html
@@ -56,7 +56,7 @@
     </head>
 
     <body>
-        <div class='w3-row wrapper'>
+        <div class='w3-row uc-wrapper'>
             
             <div id='header' class='w3-container'>
                 <@ block header @>
@@ -64,13 +64,8 @@
             </div>
 
             <div id='content' class='w3-container'>
-                <div class='w3-col l9'>
+                <div class='w3-col l12'>
                     <@ block content @>
-                    <@ endblock @>
-                </div>
-
-                <div class='w3-col l3'>
-                    <@ block service_column @>
                     <@ endblock @>
                 </div>
             </div>
