checks details, html -> use label instead of div

--- a/views/uptime-check-details.html
+++ b/views/uptime-check-details.html
@@ -8,29 +8,29 @@
 
     <form action='/uptime-checks/{{ config._id }}' method='POST' enctype='application/json'>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Status:</div>
+            <div class='w3-col l3'>Status:</div>
             <div class='w3-col l4'>
                 <span class='uc-ion-narrow ion-ios-stopwatch-outline w3-text-green'></span> <input type='radio' name='active' value='true' style='margin-right: 18px; width: auto' <@ if config.active @>checked='checked'<@ endif @>>
                 <span class='uc-ion-narrow ion-android-hand w3-text-red'></span> <input type='radio' name='active' value='false' style='width: auto' <@ if config.active == false @>checked='checked'<@ endif @>>
             </div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Name:</div><div class='w3-col l4'><input name='name' value='{{ config.name }}'></div>
+            <label class='w3-col l3' for='name' style='padding-top: 4px'>Name:</label><div class='w3-col l4'><input name='name' value='{{ config.name }}'></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Belongs to Group:</div><div class='w3-col l4'><input name='group_name' value='{{ config.group_name }}'></div>
+            <label class='w3-col l3' for='group_name'>Belongs to Group:</label><div class='w3-col l4'><input name='group_name' value='{{ config.group_name }}'></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>URL:</div><div class='w3-col l4'><input name='url' value='{{ config.url }}'></div>
+            <label class='w3-col l3' for='url'>URL:</label><div class='w3-col l4'><input name='url' value='{{ config.url }}'></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>URL Data:</div><div class='w3-col l4'><input name='data' value='{{ config.data }}'></div>
+            <label class='w3-col l3' for='data'>URL Data:</label><div class='w3-col l4'><input name='data' value='{{ config.data }}'></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Interval (in seconds):</div><div class='w3-col l4'><input name='interval' value='{{ config.interval }}' placeholder='default: 60'></div>
+            <label class='w3-col l3' for='interval'>Interval (in seconds):</label><div class='w3-col l4'><input name='interval' value='{{ config.interval }}' placeholder='default: 60'></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Checks so far:</div><div class='w3-col l4'><span>{{ config.checks.length }}</span></div>
+            <label class='w3-col l3'>Checks so far:</label><div class='w3-col l4'><span>{{ config.checks.length }}</span></div>
         </div>
 
         <div class='w3-row w3-padding-hor-24'>
