--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -15,9 +15,9 @@
     </div>
     <@ for config in configs @>
     <div class='uc-config w3-row w3-padding-hor-8' id='{{ config._id }}'>
-        <div class='w3-col l1'><span class='ion <@ if config.active @>ion-ios-stopwatch-outline w3-text-green<@ else @>ion-android-hand w3-text-red<@ endif @>'>&nbsp;</span></div>
+        <div class='w3-col l1'><a href='/uptime-checks/{{ config._id }}' class='js-config-status'><span class='ion <@ if config.active @>ion-ios-stopwatch-outline w3-text-green js-config-enabled<@ else @>ion-android-hand w3-text-red js-config-disabled<@ endif @>'>&nbsp;</span></a></div>
         <div class='w3-col l5'><h4 class='w3-margin-0'><a href='/uptime-checks/{{ config._id }}'>{{ config.name }}</a></h4></div>
-        <div class='w3-col l2'><@if config.active @>every {{ config.interval }}s<@ else @>not scheduled<@ endif @></div>
+        <div class='w3-col l2 js-config-when'><@if config.active @>every {{ config.interval }}s<@ else @>not scheduled<@ endif @></div>
         <div class='w3-col l2 js-config-last-response'>{{ config.last_response }}</div>
         <div class='w3-col l2 js-config-last-duration'>{{ config.last_duration }}</div>
     </div>
@@ -26,4 +26,34 @@
     <div class='w3-row w3-padding-hor-24'>
         <a href='/uptime-checks/create'><button class='w3-btn w3-border w3-pale-green w3-small uc-width-small'>Create Check</button></a>
     </div>
+
+    <script type='text/javascript'>
+
+    // PUT request to change 'active' status-flag of config
+    $jQ( document ).on( 'click', 'a.js-config-status', function()
+    {
+        var span = $jQ(this).find( 'span.ion' )
+        var url = $jQ(this).attr('href')
+        var futureStatus = span.hasClass( 'js-config-enabled' ) ? false : true
+
+        $jQ.ajax({
+            url: url,
+            type: 'PUT',
+            data: { 'active': futureStatus },
+            success: function( data )
+            {
+                // change status of icon
+                span.toggleClass( 'ion-ios-stopwatch-outline w3-text-green ion-android-hand w3-text-red js-config-enabled js-config-disabled' )
+                // update when column
+                if ( futureStatus == true )
+                    span.closest( 'div.uc-config' ).find( 'div.js-config-when' ).text( data.when )
+                else 
+                    span.closest( 'div.uc-config' ).find( 'div.js-config-when' ).text( 'not scheduled' )
+            }
+        })
+
+        return false;
+    })
+
+    </script>
 <@ endblock @>
