--- a/public/stylesheets/uc.css
+++ b/public/stylesheets/uc.css
@@ -2,7 +2,7 @@
 body {
     margin: auto;
     width: 1024px;
-    
+
     font-family: sans-serif;
     font-size: 15px;
 }
@@ -28,7 +28,7 @@ h2 {
 h3 {
     display: inline-block;
     border-bottom: 1px solid #ccc;
-    margin: 28px 0 13px 0;
+    margin: 28px 0 18px 0;
     padding: 3px 0;
 }
 h4 {
@@ -62,6 +62,11 @@ td {
 }
 
 /*  */
+.uc-config:nth-child(even) {
+    background-color: #fafafa;
+}
+
+/*  */
 
 .uc-hoverable {
     visibility: hidden;
@@ -74,7 +79,7 @@ td {
 
 .uc-ion {
     display: inline-block;
-    margin: 0 4px;
+    margin: 0 6px;
     width: 16px;
     cursor: pointer;
 }
@@ -93,6 +98,13 @@ td {
 }
 .uc-center {
     text-align: center;
+}
+.uc-border{border:1px solid #ddd!important}
+.uc-border-top{border-top:1px solid #ddd!important}.uc-border-bottom{border-bottom:1px solid #ddd!important}
+.uc-border-left{border-left:1px solid #ddd!important}.uc-border-right{border-right:1px solid #ddd!important}
+
+.uc-padding-hor-10 {
+    padding: 10px 0;
 }
 
 /*  */
