--- a/views/base.html
+++ b/views/base.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>{{ title }}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <script src='/javascripts/pace.min.js'></script>
         <script type='text/javascript' src='/javascripts/uc.js'></script>
