--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -44,7 +44,7 @@
             {
                 // change status of icon
                 span.toggleClass( 'ion-ios-stopwatch-outline w3-text-green ion-android-hand w3-text-red js-config-enabled js-config-disabled' )
-                // update when column
+                // update 'when'-column
                 if ( futureStatus == true )
                     span.closest( 'div.uc-config' ).find( 'div.js-config-when' ).text( data.when )
                 else 
