--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -8,18 +8,20 @@
 
     <div class='w3-row w3-padding-hor-4 uc-border-bottom'>
         <div class='w3-col l1 w3-padding-hor-4'>Status</div>
-        <div class='w3-col l5 w3-padding-hor-4'>Name</div>
+        <div class='w3-col l4 w3-padding-hor-4'>Name</div>
         <div class='w3-col l2 w3-padding-hor-4'>When</div>
         <div class='w3-col l2 w3-padding-hor-4'>Last Response</div>
         <div class='w3-col l2 w3-padding-hor-4'>Last Duration</div>
+        <div class='w3-col l1 w3-padding-hor-4'></div>
     </div>
     <@ for config in configs @>
     <div class='uc-config w3-row uc-padding-hor-10 uc-border-top' id='{{ config._id }}'>
         <div class='w3-col l1'><a href='/uptime-checks/{{ config._id }}' class='js-config-status'><span class='uc-ion <@ if config.active @>ion-ios-stopwatch-outline w3-text-green js-config-enabled<@ else @>ion-android-hand w3-text-red js-config-disabled<@ endif @>'></span></a></div>
-        <div class='w3-col l5'><h4 class='w3-margin-0'><a href='/uptime-checks/{{ config._id }}'>{{ config.name }}</a></h4></div>
+        <div class='w3-col l4'><h4 class='w3-margin-0'><a href='/uptime-checks/{{ config._id }}'>{{ config.name }}</a></h4></div>
         <div class='w3-col l2 js-config-when'><@if config.active @>every {{ config.interval }}s<@ else @>not scheduled<@ endif @></div>
         <div class='w3-col l2 js-config-last-response'>{{ config.last_response }}</div>
         <div class='w3-col l2 js-config-last-duration'>{{ config.last_duration }}</div>
+        <div class='w3-col l1'><a href='/uptime-checks/{{ config._id }}/once' class='js-config-run'><span class='uc-ion <@ if not config.active @>ion-ios-redo-outline<@ endif @>'></span></a></div>
     </div>
     <@ endfor @>
 
@@ -28,6 +30,20 @@
     </div>
 
     <script type='text/javascript'>
+
+    //
+    $jQ( document ).on( 'click', 'a.js-config-run', function()
+    {
+        var url = $jQ(this).attr('href')
+
+        $jQ.ajax({
+            url: url,
+            type: 'GET',
+            success: function( data ) { /* nothing to be done */ }
+        })
+
+        return false;
+    })
 
     // PUT request to change 'active' status-flag of config
     $jQ( document ).on( 'click', 'a.js-config-status', function()
