config details -> separate into tabs; add assumptions schema

--- a/views/base.html
+++ b/views/base.html
@@ -54,6 +54,7 @@
         <link rel='stylesheet' type='text/css' href='/stylesheets/w3.css' />
         <link rel='stylesheet' type='text/css' href='/stylesheets/pacejs.css' />
         <link rel='stylesheet' type='text/css' href='/stylesheets/uc.css' />
+        <link rel='stylesheet' type='text/css' href='/stylesheets/spectre.css' />
     </head>
 
     <body>
