css, tabs -> adjust to my usage

--- a/public/stylesheets/uc.css
+++ b/public/stylesheets/uc.css
@@ -128,3 +128,11 @@ td {
     padding: 18px;
     width: 60%;
 }
+
+/* */
+.tab-content.active {
+    display: block;
+}
+.tab-content.hidden {
+    display: none;
+}
