--- a/public/stylesheets/uc.css
+++ b/public/stylesheets/uc.css
@@ -61,6 +61,10 @@ td {
     padding: 8px 0;
 }
 
+form {
+    padding-left: 16px;
+}
+
 /*  */
 .uc-config:nth-child(even) {
     background-color: #fafafa;
