--- a/views/uptime-check-details.html
+++ b/views/uptime-check-details.html
@@ -25,27 +25,27 @@
                 </div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='name' style='padding-top: 4px'>Name:</label><div class='w3-col l4'><input name='name' value='{{ config.name }}'></div>
+                <label class='w3-col l3' for='name' style='padding-top: 4px'>Name:</label><div class='w3-col l4'><input class='uc-textfield' name='name' value='{{ config.name }}'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='group_name'>Belongs to Group:</label><div class='w3-col l4'><input name='group_name' value='{{ config.group_name }}'></div>
+                <label class='w3-col l3' for='group_name'>Belongs to Group:</label><div class='w3-col l4'><input class='uc-textfield' name='group_name' value='{{ config.group_name }}'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='url'>URL:</label><div class='w3-col l4'><input name='url' value='{{ config.url }}'></div>
+                <label class='w3-col l3' for='url'>URL:</label><div class='w3-col l4'><input class='uc-textfield' name='url' value='{{ config.url }}'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='data'>URL Data:</label><div class='w3-col l4'><input name='data' value='{{ config.data }}'></div>
+                <label class='w3-col l3' for='data'>URL Data:</label><div class='w3-col l4'><input class='uc-textfield' name='data' value='{{ config.data }}'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='interval'>Interval (in seconds):</label><div class='w3-col l4'><input name='interval' value='{{ config.interval }}' placeholder='default: 60'></div>
+                <label class='w3-col l3' for='interval'>Interval (in seconds):</label><div class='w3-col l4'><input class='uc-textfield' name='interval' value='{{ config.interval }}' placeholder='default: 60'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
                 <label class='w3-col l3'>Checks so far:</label><div class='w3-col l4'><span>{{ config.checks.length }}</span></div>
             </div>
 
             <div class='w3-row w3-padding-hor-24'>
-                <input type='submit' class='w3-btn w3-border w3-pale-green w3-small uc-width-small' value='Save'>
-                <a href='/uptime-checks'><button class='w3-btn w3-border w3-border-red w3-pale-red w3-small uc-width-small' type='button'>Cancel</button></a>
+                <input type='submit' class='w3-btn w3-border w3-pale-green w3-small' value='Save'>
+                <a href='/uptime-checks'><button class='w3-btn w3-border w3-border-red w3-pale-red w3-small' type='button'>Cancel</button></a>
             </div>
         </form>
     </div>
@@ -54,21 +54,21 @@
         <form action='/uptime-checks/{{ config._id }}' method='POST' autocomplete='off'>
         <@ for assump in config.assumptions @>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][label]'>Label:</label><div class='w3-col l4'><input name='assumptions[{{ loop.index0 }}][label]' value='{{ assump.label }}'></div>
+                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][label]'>Label:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][label]' value='{{ assump.label }}'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][type]'>Type:</label><div class='w3-col l4'><input name='assumptions[{{ loop.index0 }}][type]' value='jQuery Selector' disabled='disabled'></div>
+                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][type]'>Type:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][type]' value='jQuery Selector' disabled='disabled'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][value]'>Value:</label><div class='w3-col l4'><input name='assumptions[{{ loop.index0 }}][value]' value='{{ assump.value }}'></div>
+                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][value]'>Value:</label><div class='w3-col l4'><input class='uc-textfield uc-code' name='assumptions[{{ loop.index0 }}][value]' value='{{ assump.value }}'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][expected_value]'>Expected Value:</label><div class='w3-col l4'><input name='assumptions[{{ loop.index0 }}][expected_value]' value='{{ assump.expected_value }}'></div>
+                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][expected_value]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][expected_value]' value='{{ assump.expected_value }}'></div>
             </div>
 
             <div class='w3-row w3-padding-hor-24'>
-                <input type='submit' class='w3-btn w3-border w3-pale-green w3-small uc-width-small' value='Save'>
-                <a href='/uptime-checks'><button class='w3-btn w3-border w3-border-red w3-pale-red w3-small uc-width-small' type='button'>Cancel</button></a>
+                <input type='submit' class='w3-btn w3-border w3-pale-green w3-small' value='Save'>
+                <a href='/uptime-checks'><button class='w3-btn w3-border w3-border-red w3-pale-red w3-small' type='button'>Cancel</button></a>
             </div>
         <@ endfor @>
         </form>
