--- a/views/uptime-checks.html
+++ b/views/uptime-checks.html
@@ -26,7 +26,7 @@
     <@ endfor @>
 
     <div class='w3-row w3-padding-hor-24'>
-        <a href='/uptime-checks/create'><button class='w3-btn w3-border w3-pale-green w3-small'>Create Check</button></a>
+        <a href='/uptime-checks/create'><button class='w3-border w3-small'>Create Check</button></a>
     </div>
 
     <script type='text/javascript'>
