--- a/views/uptime-check-create.html
+++ b/views/uptime-check-create.html
@@ -8,24 +8,24 @@
 
     <form action='/uptime-checks' method='POST' enctype='application/json'>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Name:</div><div class='w3-col l4'><input name='name' value=''></div>
+            <div class='w3-col l2'>Name:</div><div class='w3-col l4'><input class='uc-textfield' name='name' value=''></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Belongs to Group:</div><div class='w3-col l4'><input name='group_name' value=''></div>
+            <div class='w3-col l2'>Belongs to Group:</div><div class='w3-col l4'><input class='uc-textfield' name='group_name' value=''></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>URL:</div><div class='w3-col l4'><input name='url' value=''></div>
+            <div class='w3-col l2'>URL:</div><div class='w3-col l4'><input class='uc-textfield uc-code' name='url' value=''></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>URL Data:</div><div class='w3-col l4'><input name='data' value=''></div>
+            <div class='w3-col l2'>URL Data:</div><div class='w3-col l4'><input class='uc-textfield' name='data' value=''></div>
         </div>
         <div class='w3-row w3-padding-hor-4'>
-            <div class='w3-col l2'>Interval (in seconds):</div><div class='w3-col l4'><input name='interval' value='' placeholder='default: 60'></div>
+            <div class='w3-col l2'>Interval (in seconds):</div><div class='w3-col l4'><input class='uc-textfield' name='interval' value='' placeholder='default: 60'></div>
         </div>
 
         <div class='w3-row w3-padding-hor-24'>
-            <input type='submit' class='w3-btn w3-border w3-pale-green w3-small uc-width-small' value='Save'>
-            <a href='/uptime-checks'><button class='w3-btn w3-border w3-border-red w3-pale-red w3-small uc-width-small' type='button'>Cancel</button></a>
+            <input type='submit' class='w3-border w3-small' value='Save'>
+            <a href='/uptime-checks'><button class='uc-background-none w3-small' type='button'>Cancel</button></a>
         </div>
     </form>
 
