config details, assumptions -> catch empty assumptions and display message to user

--- a/views/uptime-check-details.html
+++ b/views/uptime-check-details.html
@@ -51,8 +51,10 @@
     </div>
 
     <div id='assumptions' class='tab-content hidden'>
+        <@ if config.assumptions.length > 0 @>
         <form action='/uptime-checks/{{ config._id }}' method='POST' autocomplete='off'>
-        <@ for assump in config.assumptions @>
+        
+            <@ for assump in config.assumptions @>
             <div class='w3-row w3-padding-hor-4'>
                 <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][label]'>Label:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][label]' value='{{ assump.label }}'></div>
             </div>
@@ -65,13 +67,18 @@
             <div class='w3-row w3-padding-hor-4'>
                 <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][expected_value]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][expected_value]' value='{{ assump.expected_value }}'></div>
             </div>
+            <@ endfor @>
 
             <div class='w3-row w3-padding-hor-24'>
                 <input type='submit' class='w3-border w3-small' value='Save'>
                 <a href='/uptime-checks'><button class='uc-background-none w3-small' type='button'>Cancel</button></a>
             </div>
-        <@ endfor @>
         </form>
+        <@ else @>
+        <div class='w3-row w3-padding-hor-4'>
+            <p>No assumptions so far.</p>
+        </div>
+        <@ endif @>
     </div>
 
     <script type='text/javascript'>
