config, assumptions -> add form below the list to enter new post

--- a/public/stylesheets/uc.css
+++ b/public/stylesheets/uc.css
@@ -79,6 +79,10 @@ td {
 form {
     padding-left: 16px;
 }
+p {
+    padding-top:4px;
+    padding-bottom:4px;
+}
 
 /*  */
 .uc-config:nth-child(even) {
