--- a/views/uptime-check-details.html
+++ b/views/uptime-check-details.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='name' style='padding-top: 4px'>Name:</label><div class='w3-col l4'><input class='uc-textfield' name='name' value='{{ config.name }}'></div>
+                <label class='w3-col l3' for='name' style='padding-top: 4px'>Name:</label><div class='w3-col l4'><input class='uc-textfield w3-border-orange' name='name' value='{{ config.name }}'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
                 <label class='w3-col l3' for='group_name'>Belongs to Group:</label><div class='w3-col l4'><input class='uc-textfield' name='group_name' value='{{ config.group_name }}'></div>
@@ -60,24 +60,26 @@
             <h4>All Assumptions</h4>
 
         <@ for assump in config.assumptions @>
-            <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][label]'>Label:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][label]' value='{{ assump.label }}'></div>
-            </div>
-            <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][type]'>Type:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][type]' value='jQuery Selector' disabled='disabled'></div>
-            </div>
-            <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][value]'>Value:</label><div class='w3-col l4'><input class='uc-textfield uc-code' name='assumptions[{{ loop.index0 }}][value]' value='{{ assump.value }}'></div>
-            </div>
-            <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][expected_value]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][expected_value]' value='{{ assump.expected_value }}'></div>
+            <div class='w3-margin-bottom'>
+                <div class='w3-row w3-padding-hor-4'>
+                    <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][label]'>Label:</label><div class='w3-col l4'><input class='uc-textfield w3-border-orange' name='assumptions[{{ loop.index0 }}][label]' value='{{ assump.label }}'></div>
+                </div>
+                <div class='w3-row w3-padding-hor-4'>
+                    <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][type]'>Type:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][type]' value='jQuery Selector' disabled='disabled'></div>
+                </div>
+                <div class='w3-row w3-padding-hor-4'>
+                    <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][value]'>Value:</label><div class='w3-col l4'><input class='uc-textfield uc-code' name='assumptions[{{ loop.index0 }}][value]' value='{{ assump.value }}'></div>
+                </div>
+                <div class='w3-row w3-padding-hor-4'>
+                    <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][expected_value]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][expected_value]' value='{{ assump.expected_value }}'></div>
+                </div>
             </div>
         <@ endfor @>
 
             <h4>Create new Assumption</h4>
 
             <div class='w3-row w3-padding-hor-4'>
-                <label class='w3-col l3' for='assumptions[{{ config.assumptions.length }}][label]'>Label:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ config.assumptions.length }}][label]' value='' placeholder='length of list'></div>
+                <label class='w3-col l3' for='assumptions[{{ config.assumptions.length }}][label]'>Label:</label><div class='w3-col l4'><input class='uc-textfield w3-border-orange' name='assumptions[{{ config.assumptions.length }}][label]' value='' placeholder='length of list'></div>
             </div>
             <div class='w3-row w3-padding-hor-4'>
                 <label class='w3-col l3' for='assumptions[{{ config.assumptions.length }}][type]'>Type:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ config.assumptions.length }}][type]' value='jQuery Selector' disabled='disabled'></div>
