--- a/views/uptime-check-details.html
+++ b/views/uptime-check-details.html
@@ -93,7 +93,7 @@
 
             <div class='w3-row w3-padding-hor-24'>
                 <input type='submit' class='w3-border w3-small' value='Save'>
-                <a href='/uptime-checks'><button class='uc-background-none w3-small' type='button'>Cancel</button></a>
+                <a href='/uptime-checks'><button class='uc-background-none w3-small' type='button'>Go back</button></a>
             </div>
         </form>
     </div>
