--- a/views/uptime-check-details.html
+++ b/views/uptime-check-details.html
@@ -60,7 +60,7 @@
             <h4>All Assumptions</h4>
 
         <@ for assump in config.assumptions @>
-            <div class='w3-margin-bottom'>
+            <div class='w3-margin-bottom uc-assumption'>
                 <div class='w3-row w3-padding-hor-4'>
                     <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][label]'>Label:</label><div class='w3-col l4'><input class='uc-textfield w3-border-orange' name='assumptions[{{ loop.index0 }}][label]' value='{{ assump.label }}'></div>
                 </div>
@@ -72,6 +72,10 @@
                 </div>
                 <div class='w3-row w3-padding-hor-4'>
                     <label class='w3-col l3' for='assumptions[{{ loop.index0 }}][expected_value]'>Expected Value:</label><div class='w3-col l4'><input class='uc-textfield' name='assumptions[{{ loop.index0 }}][expected_value]' value='{{ assump.expected_value }}'></div>
+                </div>
+                
+                <div class='w3-row w3-padding-hor-4'>
+                    <button class='w3-border w3-small js-config-assumption-remove' type='button'>Remove</button>
                 </div>
             </div>
         <@ endfor @>
@@ -115,6 +119,12 @@
             $jQ(this).parent().addClass( 'active' )
 
             return false;
+        })
+
+        //
+        $jQ( document ).on( 'click', 'button.js-config-assumption-remove', function()
+        {
+            $jQ(this).closest( 'div.uc-assumption' ).remove()
         })
 
     </script>
